Fix alignment issue with vertical grid lines

--- a/frontend/scss/organisms/_o-custom-tours-builder.scss
+++ b/frontend/scss/organisms/_o-custom-tours-builder.scss
@@ -11,6 +11,11 @@
   margin-left: -4.6875vw;
   margin-right: -4.6875vw;
 
+  @include breakpoint('medium+') {
+    margin-left: 0;
+    margin-right: 0;
+  }
+
   // Override the reset styles for dialog elements
   dialog {
     display: revert;
@@ -30,6 +35,7 @@
     &::backdrop {
       background-color: rgb(0,0,0,0.6);
     }
+
   }
 
   .m-listing__link {
@@ -87,6 +93,11 @@
 .aic-ct__core {
   padding-left: 20px;
   padding-right: 20px;
+
+  @include breakpoint('medium+') {
+    padding-left: 0;
+    padding-right: 0;
+  }
 }
 
 // ---- Custom tours: Preview
@@ -118,6 +129,8 @@
   background-color: $color__white;
   padding-top: 8px;
   padding-bottom: 8px;
+
+
 
   h2 {
     @include untuck;
@@ -188,6 +201,11 @@
   background-color: $color__black;
   color: $color__white;
   z-index: 9;
+
+  @include breakpoint('medium+') {
+    margin-left: -4.6875vw;
+    margin-right: -4.6875vw;
+  }
 }
 
 .aic-ct-item-info {
@@ -426,6 +444,11 @@
   padding: 16px 20px;
   background-color: $color__black;
   color: $color__white;
+
+  @include breakpoint('medium+') {
+    margin-left: -4.6875vw;
+    margin-right: -4.6875vw;
+  }
 }
 
 .aic-ct-nav {
